# avena

./: Cargo.toml  Containerfile  DESIGN.md  README.md
agent/: Cargo.toml
agent/src/: main.rs
avena/: Cargo.toml
avena-test/: Cargo.toml
avena-test/src/: cluster.rs  lib.rs
avena-test/src/chaos/: mod.rs  toxiproxy.rs
avena/src/: devices.rs  hlc.rs  lib.rs  test_utils.rs
avena/src/messages/: mod.rs
avenactl/: Cargo.toml
avenactl/src/: main.rs
avenactl/src/commands/: context.rs  devices.rs  link.rs  mod.rs  nodes.rs
avenactl/src/config/: context.rs  manifest.rs  mod.rs
avenad/: Cargo.toml
avenad/src/: device.rs  lib.rs  link.rs  main.rs  nats_jwt.rs  systemd.rs  workload.rs
avenad/src/systemd/: manager.rs  service_unit.rs  unit.rs
avenad/templates/nats/: server.conf
avenad/templates/podman/: template.service
avenad/tests/: broadcast_discovery.rs  chaos_scenarios.rs  cluster_discovery.rs  hlc_distributed.rs  jetstream_kv.rs  ping_status.rs
scripts/: BOOTC-TESTING.md  TESTING.md  avenad.service  bootc-harness.sh  chaos.sh  dev-harness.sh  nspawn-harness.sh  test-multi-device.sh
