[package]
name = "avenactl"
version = "0.1.0"
edition = "2021"
authors = [ "Andrew Balmos <abalmos@purdue.edu>"]

[dependencies]
avena = { path = "../avena" }
clap = { version = "3.1.6", features = [ "derive" ] }
color-eyre = "0.6.1"
comfy-table = "5.0.1"
directories = "4.0.1"
lazy_static = "1.4.0"
nats = "0.18.1"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
toml_edit = { version = "0.13.4", features = [ "serde" ] }

