[package]
name = "avenad"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
jsonwebtoken = { version = "9", default-features = false }
color-eyre = "0.6.1"
serde = "1.0.137"
serde_json = "1.0.81"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zvariant = "4.2.0"
color-print = "0.3.6"
askama = "0.12.1"
async-nats = "0.36.0"
futures = "0.3.30"
nkeys = "0.4.4"
data-encoding = "2.6.0"
